--- a/templates/index.html
+++ b/templates/index.html
@@ -83,16 +83,12 @@
             z-index: 99;
             display: flex;
             flex-direction: column;
+            align-items: flex-start;
         }
 
         details ul li {
             list-style: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        details ul li:not(:last-child) {
-            margin-bottom: 0.75rem;
+            padding: 0.5rem 0;
         }
 
         details ul li label {
@@ -101,7 +97,6 @@
             gap: 0.5rem;
             margin: 0;
             cursor: pointer;
-            padding: 0;
         }
 
         /* Filter dropdown content */
